Major update - Personal Statement update and better formatting - Added link to personal website - Updated role in Humanity X - Added Robot Design Judge role in FLL Scottsdale Qualifier - Changed font - Fixed line spacing for better readability - Fixed formatting on Research for better readability - Added icon

--- a/scripts/creative.css
+++ b/scripts/creative.css
@@ -4,6 +4,11 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
+@font-face {
+  font-family: "Droid Serif";
+  src: url(../fonts/DroidSerif.ttf) format("truetype");
+}
+
 html,
 body {
     width: 100%;
@@ -11,7 +16,7 @@ body {
 }
 
 body {
-    font-family: Helvetica Neue;
+    font-family: "Droid Serif";
 }
 
 hr {
@@ -32,7 +37,7 @@ a {
 
 a:hover,
 a:focus {
-    color: #FF4000;
+    color: #0B486B;
 }
 
 h1,
@@ -41,15 +46,15 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
+    font-family: 'Open Sans'
 }
 
 p {
-    margin-bottom: 0px;
+    margin-bottom: 5px;
     margin-top: 0px;
     font-size: 17px;
-    line-height: 1.3;
-    font-family: serif;
+    line-height: normal;
+    font-family: "Droid Serif";
 }
 
 ul {
@@ -68,7 +73,7 @@ li {
 .bg-primary {
     background-color: #000000;
     text-shadow: 2px 2px 2px black;
-    background-image: url("../images/background.jpg");
+    background-image: url();
     background-position: center;
     background-repeat: no-repeat;
 }
@@ -88,7 +93,7 @@ li {
 }
 
 section {
-    padding: 100px 0;
+    padding: 40px 0;
 }
 
 aside {
@@ -151,7 +156,7 @@ aside {
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
     padding: 0 15px;
-    font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
+    font-family: 'Open Sans',"Droid Serif",Arial,sans-serif;
 }
 
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
@@ -301,7 +306,7 @@ fieldset[disabled] .btn-primary.active {
     border: 0;
     border-radius: 300px;
     text-transform: uppercase;
-    font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
+    font-family: 'Open Sans',"Droid Serif",Arial,sans-serif;
     font-weight: 700;
 }
 
